style contributions --Jedo

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(to right, #54f, #84f);
+  /* background: linear-gradient(to right, #54f, #84f); */
+  background: linear-gradient(90deg,#5544ff30,#5b58f83d);
+}
+.jumbotron {
+  background-color: #fdfdfd;
+}
+img.img-fluid.rounded-circle:hover {
+  opacity: 0.95;
 }
 
 code {
