--- a/src/index.css
+++ b/src/index.css
@@ -23,5 +23,10 @@ code {
   display: flex !important;
   flex-direction: column !important;
   margin: 2rem 0;
+}
+
+.form-control[label], label , textarea{
+  margin: 2rem;
+  padding: 1rem;
 
 }
