--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   background-color: #fdfdfd !important;
   margin: 0 auto;
 }
-img.img-fluid.rounded-circle:hover {
+img.rounded-circle:hover {
   opacity: 0.95;
 }
 
