--- a/src/App.css
+++ b/src/App.css
@@ -7407,7 +7407,7 @@ textarea.form-control-lg {
 }
 
 .bg-primary {
-  background-color: #ee0979 !important;
+  background-color: #778cac !important;
 }
 
 .bg-secondary {
