--- a/src/components/Contact Form/index.css
+++ b/src/components/Contact Form/index.css
@@ -1,11 +1,10 @@
 *{
-    margin: auto;
-    padding: 0;
+    box-sizing: border-box;
+    margin: 0;
 }
 body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-
 label{
     font-size: 1rem;
 }
@@ -18,4 +17,10 @@ input.form-control, input.form-control:focus{
     position: absolute;
     color: red;
     font-size: .6rem;
+}
+
+@media (max-width: 480px) {
+    *{
+        margin: auto;
+    }
 }
