mobile nav fixed

--- a/src/components/Contact Form/index.css
+++ b/src/components/Contact Form/index.css
@@ -23,4 +23,8 @@ input.form-control, input.form-control:focus{
     *{
         margin: auto;
     }
+    .bar{
+        display: flex;
+        justify-content: space-between;
+    }
 }
