--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.pbi-dashboards{
+  margin: 0 auto;
+  padding: 1rem;
+  
+}
