--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,9 @@ code {
   
 }
 .hero{
-  background-image: url('./assets/img/hero/jt2_no_bg.png');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5),
+   rgba(0, 0, 0, 0.5)),
+   url('./assets/img/hero/jt2_norm.jpg');
   background-color: #5544ff30;
   background-repeat: no-repeat;
   /* background-position: center; */
@@ -42,11 +44,12 @@ code {
   top: 30vh;
 }
 .heromsg{
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
 
 @media screen and (max-width: 420px) {
