--- a/src/index.css
+++ b/src/index.css
@@ -30,8 +30,8 @@ code {
   
 }
 .hero{
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5),
-   rgba(0, 0, 0, 0.5)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1),
+   rgba(0, 0, 0, 0.2)),
    url('./assets/img/hero/jt2_norm.jpg');
   background-color: #5544ff30;
   background-repeat: no-repeat;
@@ -47,14 +47,36 @@ code {
   text-align: center;
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 20%;
   transform: translate(-50%, -50%);
   color: white;
+}
+.socials > ul{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 85%;
+}
+.socials > ul > li > a{
+  height: 50px;
+
 }
 
 @media screen and (max-width: 420px) {
   .hero{
     background-size: cover;
     height: calc(720px - 480px);
+  }
+  .heromsg{
+    top: 40%;
+    left: 50%;
+    font-size: smaller;
+    color: #8f8eb63d;
+    
+    -webkit-text-stroke: .5px white;
+    /* -webkit-text-fill-color: white; */
+  }
+  .heromsg button{
+    size: sm;
   }
 }
