--- a/src/index.css
+++ b/src/index.css
@@ -110,7 +110,7 @@ code {
 }
 /* media queries  */
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 460px) {
   .hero{
     background-size: cover;
     height: 720px;
@@ -119,7 +119,7 @@ code {
     top: 50%;
     left: 50%;
     font-size: smaller;
-    color: #8f8eb63d;
+    color: #ccc;
     
     -webkit-text-stroke: .5px white;
     /* -webkit-text-fill-color: white; */
@@ -133,8 +133,6 @@ code {
     top: 0px;
     left: 0px;
     margin: 0 auto;
-
-
-
+    padding-top: 40%;
   }
 }
